<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/tv_Bienvenida"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAtajoCorto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectagle_rounded_buttom"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/atajo_corto"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAtajoLargo"
        app:layout_constraintBottom_toTopOf="@+id/btnAtajoLargo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="atajoCorto"
        />

    <Button
        android:id="@+id/btnAtajoLargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atajo_largo"
        android:textSize="18dp"
        android:layout_margin="12dp"
        android:background="@drawable/rectagle_rounded_buttom"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="atajoLargo"
        />

</androidx.constraintlayout.widget.ConstraintLayout>